--- a/src/petromart/views/layout.erb
+++ b/src/petromart/views/layout.erb
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petro Banco</title>
+    <title>PetroMart</title>
+   <link rel="stylesheet" type="text/css" href="/css/style.css">
+   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+
+
     
 </head>
 <body>
-    <h1>Välkommen till Petro Mart</h1>
-    <%= yield %>
-    <span>Keep yourself safe!</span>
+
+<header>
+    <p> 1 </p>
+    <p> 2 </p>
+    <p> 3 </p>
+    <p> 4 </p>
+    <p> 5 </p>    
+</header>
+<main>
+     <%= yield %>
+</main>
+<footer>
+    <p> LOL </p>
+</footer>
+
 </body>
 </html>
