--- a/src/petromart/views/layout.erb
+++ b/src/petromart/views/layout.erb
@@ -18,13 +18,12 @@
 <% if session[:user_id] %>
   <p>Välkommen <%= @user['username'].capitalize %>! </p>
  <p>Antal saker i kundvagn: <%= @cart.length%> </p>
- <p> <%= @cart[1] %> </p>
 
   <a href="/logout">
     <button>Logout</button>
   </a>
 
-  <a href="/cart">
+  <a href="/carts/show">
     <button>Gå till kundvagn</button>
   </a>
 <% else %>
