--- a/src/petromart/views/users/new.erb
+++ b/src/petromart/views/users/new.erb
@@ -1,10 +1,6 @@
- 
 
-
-
- 
- 
- <form id="register" action="/register" method="post" enctype="multipart/form-data">
+<h3>REGISTER</h3>
+<form id="register" action="/register" method="post" enctype="multipart/form-data">
 
     <label for="name">Username:</label>
     <input type="text" id="username" name="username">
